Fix for bug #9838: INFORMATION_SCHEMA.COLUMNS columns of granted views missing